--- a/gestion-ecole-front/src/app/professeurs/list/list.component.html
+++ b/gestion-ecole-front/src/app/professeurs/list/list.component.html
@@ -1,1 +1,45 @@
-<p>list works!</p>
+<mat-card>
+    <mat-card-title>
+      <div class="toolbar">
+        Liste des Professeurs
+        <button mat-raised-button color="primary" (click)="openAddDialog()">
+          <mat-icon>add</mat-icon> Ajouter
+        </button>
+      </div>
+    </mat-card-title>
+  
+    <table mat-table [dataSource]="professeurs" class="mat-elevation-z8">
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <td mat-cell *matCellDef="let professeur"> {{ professeur.id }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef> Nom </th>
+        <td mat-cell *matCellDef="let professeur">
+          {{ professeur.firstName }} {{ professeur.lastName }}
+        </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef> Email </th>
+        <td mat-cell *matCellDef="let professeur"> {{ professeur.email }} </td>
+      </ng-container>
+  
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef> Actions </th>
+        <td mat-cell *matCellDef="let professeur">
+          <button mat-icon-button color="primary" (click)="openEditDialog(professeur)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="warn" (click)="openDeleteDialog(professeur)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </td>
+      </ng-container>
+  
+      <tr mat-header-row *matHeaderRowDef="['id', 'name', 'email', 'actions']"></tr>
+      <tr mat-row *matRowDef="let row; columns: ['id', 'name', 'email', 'actions'];"></tr>
+    </table>
+  </mat-card>
+  
